# exop

./: README.md  analysis.py  checknoisy.py  cnn1.py  exofop_lcs.py  infer1.py  infer_lcs.py  load_dataset1.py  make_train_dataset.py  metrics_plots.py  noisy_lcs.py  overfit_train.py  pld_process.py  pld_single.py  plot_lc.py  plotttt.py  pyproject.toml  train1.py
tics/: all_targets_S003_v1.csv  all_targets_S011_v1.csv  all_targets_S016_v1.csv  all_targets_S020_v1.csv  all_targets_S023_v1.csv  all_targets_S024_v1.csv  all_targets_S025_v1.csv  all_targets_S026_v1.csv  tois.csv
