[project]
name = "exop"
version = "0.1.0"
description = "ML model based off Olmshenck 2021"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"retrying>=1.3.4",
    "tenacity>=8.1.0",
    "numpy>=2.0.0",
    "pandas>=1.5.3",
    "astropy>=6.1.0",
    "astroquery>=0.4.6",
    "requests>=2.28.2",
    "pytest>=7.2.1,<8",
    "pyarrow>=11.0.0",
    "gitpython>=3.1.30",
    "matplotlib>=3.6.3",
    "pipreqs>=0.4.11",
    "bokeh>=3.0.0",
    "scipy>=1.10.0",
    "setuptools>=67.1.0",
    "peewee>=3.15.4",
    "pytest-asyncio>=0.20.3",
    "wandb>=0.13.9",
    "plotly>=5.13.0",
    "tornado>=6.2",
    "beautifulsoup4>=4.11.2",
    "lxml>=4.9.2",
    "lightkurve>=2.5.0",
    "uvloop>=0.17.0; platform_system != 'Windows'",
    "filelock>=3.9.0",
    "torch>=2.0.1",
    "torchvision>=0.15.2",
    "polars>=0.19.10",
    "torchmetrics>=1.2.0",
    "stringcase>=1.2.0",
    "atpublic>=4.0",
    "pytest-pycharm>=0.7.0",
    "furo>=2023.9.10",
    "sphinx>=6.1.3",
    "backports.strenum",
    "typing_extensions",
    "myst-parser",
    "torcheval>=0.0.7",
    "lightning>=2"
]
